--- a/package.json
+++ b/package.json
@@ -5,20 +5,24 @@
   "repository": "https://github.com/gabrielcancio/happy-pet-backend.git",
   "author": "gabrielcancio <gabriel.cancio02@gmail.com>",
   "scripts": {
-    "start": "tsc src/app.ts",
+    "start": "tsc dist/app.js",
     "dev": "ts-node-dev --ignore-watch node_modules src/app.ts ",
-    "test": "jest"
+    "test": "jest",
+    "knex:migrate": "knex migrate:latest --knexfile knexfile.ts"
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
-    "sqlite3": "^4.2.0"
+    "sqlite3": "^4.2.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/jest": "^26.0.3",
+    "@types/uuid": "^8.0.0",
     "jest": "^26.1.0",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
