--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
   "scripts": {
     "start": "tsc dist/app.js",
     "dev": "ts-node-dev --ignore-watch node_modules src/app.ts ",
+    "pretest": "dotenv set NODE_ENV test",
     "test": "jest",
     "knex:migrate": "knex migrate:latest --knexfile knexfile.ts"
   },
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/supertest": "^2.0.10",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
     "sqlite3": "^4.2.0",
     "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.3",
     "@types/uuid": "^8.0.0",
+    "faker": "^4.1.0",
     "jest": "^26.1.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
